<resources>
    <string name="app_name">TugasAndroidChapter4</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="address">Address :</string>
    <string name="handphone">Handphone :</string>
    <string name="gender">Gender :</string>
    <string name="birthdate">BirthDate :</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="data_karyawan">Data Karyawan</string>
    <string name="applicant_data">Applicant Data</string>
</resources>

