<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="#293859" />

    <LinearLayout
        android:id="@+id/topbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applicant_data"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="30dp"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Nama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/name"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Nama"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/email"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Email"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/address"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Handphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Address"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/handphone"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Handphone"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="9dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/gender"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/BirthDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Gender"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/birthdate"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/editEmail"
                        android:layout_alignBaseline="@+id/Nama"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="19dp"
                        android:layout_marginBottom="-13dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/Email"
                        android:layout_alignBottom="@+id/Email"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="21dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:text="" />

                    <EditText
                        android:id="@+id/editAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/Address"
                        android:layout_alignBottom="@+id/Address"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="21dp"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:text="" />

                    <EditText
                        android:id="@+id/editHandphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/Handphone"
                        android:layout_alignBottom="@+id/Handphone"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="21dp"
                        android:ems="10"
                        android:inputType="phone"
                        android:text="" />


                    <RadioGroup
                        android:id="@+id/rg_JenisKelamin"
                        android:layout_width="231dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/Gender"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="-7dp"
                        android:layout_toEndOf="@+id/Gender"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rd_Pria"
                            android:layout_width="93dp"
                            android:layout_height="wrap_content"
                            android:onClick="fungsiRBJK"
                            android:text="@string/pria" />

                        <RadioButton
                            android:id="@+id/rd_Wanita"
                            android:layout_width="104dp"
                            android:layout_height="wrap_content"
                            android:onClick="fungsiRBJK"
                            android:text="@string/wanita" />

                    </RadioGroup>


                        <EditText
                            android:clickable="true"
                            android:id="@+id/tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/BirthDate"
                            android:layout_alignBottom="@+id/BirthDate"
                            android:layout_marginEnd="21dp"
                            android:layout_alignParentEnd="true"
                            android:ems="10"
                            android:inputType="date"
                            android:focusable="true" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/pass"
                        android:background="@color/green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="Pass"
                        android:textColor="#424242"
                        android:layout_marginRight="40dp"
                        android:textSize="11sp"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/failed"
                        android:background="@color/red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="false"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="Failed"
                        android:textColor="#424242"
                        android:textSize="11sp"
                        android:layout_toRightOf="@+id/pass"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>